# matchx

./: README.md  docker-compose.yml
api/: main.py
docs/: annotated.html  annotated_dup.js  classFillOrKillTIF-members.html  classFillOrKillTIF.html  classFillOrKillTIF.js  classGoodTillCancelledTIF-members.html  classGoodTillCancelledTIF.html  classGoodTillCancelledTIF.js  classImmediateOrCancelTIF-members.html  classImmediateOrCancelTIF.html  classImmediateOrCancelTIF.js  classLimitOrder-members.html  classLimitOrder.html  classLimitOrder.js  (+66 more)
matchx/: .dockerignore  CMakeLists.txt  Dockerfile  Doxyfile  docker-compose.yml  flake.nix
matchx/docs/: mainpage.dox
matchx/docs/html/: annotated.html  annotated_dup.js  classDisseminator.html  classFillOrKillTIF.html  classGoodTillCancelledTIF.html  classImmediateOrCancelTIF.html  classLimitOrder-members.html  classLimitOrder.html  classMarketOrder-members.html  classMarketOrder.html  classMatchingEngine-members.html  classMatchingEngine.html  classMatchingEngine.js  classOrder-members.html  classOrder.html  classOrderBook-members.html  classOrderBook.html  classOrderBookManager-members.html  classOrderBookManager.html  classOrderBookManager.js  classOrderBookUpdate-members.html  classOrderBookUpdate.html  classOrderParser-members.html  classOrderParser.html  classTimeInForce.html  classTrade.html  classes.html  constants_8hpp_source.html  dir_06f088bbaed96e60c6c375682489ce84.html  dir_0966d06610f72609fd9aa4979c2b5a92.html  dir_0966d06610f72609fd9aa4979c2b5a92.js  dir_0ad255a918b7fba820a1ddafed6fa637.html  dir_0ad255a918b7fba820a1ddafed6fa637.js  dir_273c118784bd2ce210a379f024ef2da9.html  dir_518c6c2c8c43641fc5ee5dd9a8ee284a.html  dir_5579dc926a6264d063581243e3e24c50.html  dir_5579dc926a6264d063581243e3e24c50.js  dir_57d24926469875784ccc79a4a88697d0.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_785f7055fd31d8c001dc77cc85c1ced5.html  (+33 more)
matchx/docs/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_3.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
matchx/include/book/: order_book.hpp  order_book_manager.hpp  order_book_update.hpp
matchx/include/common/: constants.hpp  types.hpp  utils.hpp
matchx/include/disseminator/: disseminator.hpp
matchx/include/engine/: matching_engine.hpp
matchx/include/orders/: limit_order.hpp  market_order.hpp  order.hpp  order_parser.hpp
matchx/include/tif/: fok_tif.hpp  gtc_tif.hpp  ioc_tif.hpp  tif.hpp
matchx/include/trade/: trade.hpp
matchx/src/: main.cpp
matchx/src/book/: order_book.cpp  order_book_manager.cpp  order_book_update.cpp
matchx/src/engine/: matching_engine.cpp
matchx/src/orders/: limit_order.cpp  market_order.cpp  order.cpp  order_parser.cpp
matchx/src/tif/: fok_tif.cpp  gtc_tif.cpp  ioc_tif.cpp
(+36 files in other folders)
